fixed overflow issue

--- a/components/navigation/sideNav/side_nav.module.css
+++ b/components/navigation/sideNav/side_nav.module.css
@@ -25,8 +25,8 @@
   -ms-user-select: none;
   cursor: pointer;
   position: absolute;
-  top: 18px;
-  right: 15px;
+  top: 8px;
+  right: 16.5px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -70,7 +70,6 @@
 .a {
   padding: 24px;
 }
-
 
 .drop_button {
   padding: 24px;
