--- a/components/sideMenus/side_menu.module.css
+++ b/components/sideMenus/side_menu.module.css
@@ -24,8 +24,8 @@
   -ms-user-select: none;
   cursor: pointer;
   position: absolute;
-  top: 18px;
-  right: 15px;
+  top: 8px;
+  right: 16.5px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
